--- a/app/src/main/res/layout/content_scrolling.xml
+++ b/app/src/main/res/layout/content_scrolling.xml
@@ -7,7 +7,6 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".ScrollingActivity"
     tools:showIn="@layout/activity_scrolling">
-    <?xml version="1.0" encoding="utf-8"?>
 
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -16,8 +15,8 @@
         android:layout_height="match_parent"
 
         android:orientation="vertical"
-        android:paddingTop="16dp"
         android:paddingLeft="16dp"
+        android:paddingTop="16dp"
 
         android:paddingRight="16dp">
 
@@ -34,10 +33,10 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/textView2"
+                android:id="@+id/pound"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/£" />
+                android:text="@string/pound" />
 
 
             <EditText
@@ -46,6 +45,12 @@
                 android:layout_height="wrap_content"
                 android:ems="10"
                 android:inputType="numberDecimal" />
+
+            <TextView
+                android:id="@+id/litre"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/litre" />
 
         </LinearLayout>
 
@@ -62,8 +67,6 @@
             android:orientation="horizontal">
 
 
-
-
             <EditText
                 android:id="@+id/fuel_consumption_input"
                 android:layout_width="wrap_content"
@@ -78,7 +81,6 @@
                 android:text="@string/mpg" />
 
         </LinearLayout>
-
 
 
         <TextView
@@ -108,7 +110,12 @@
                 android:text="@string/miles" />
 
         </LinearLayout>
-
+        <Button xmlns:android="http://schemas.android.com/apk/res/android"
+            android:id="@+id/calculate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/calculate"
+            android:onClick="CalTripCost" />
 
 
         <TextView
@@ -123,10 +130,10 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/£2"
+                android:id="@+id/pound2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/£" />
+                android:text="@string/pound" />
 
             <EditText
                 android:id="@+id/trip_cost_output"
@@ -136,15 +143,10 @@
                 android:inputType="numberDecimal" />
 
 
-
         </LinearLayout>
 
 
-
-
-
     </LinearLayout>
-
 
 
 </androidx.core.widget.NestedScrollView>
