--- a/app/src/main/res/layout/fragment_blank.xml
+++ b/app/src/main/res/layout/fragment_blank.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".FuelCalActivity"
-    tools:showIn="@layout/activity_scrolling">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".BlankFragment">
 
+    <!-- TODO: Update blank fragment layout -->
 
     <LinearLayout
 
@@ -19,7 +18,6 @@
         android:paddingTop="16dp"
 
         android:paddingRight="16dp">
-
 
         <TextView
             android:id="@+id/fuel_price"
@@ -51,7 +49,6 @@
 
         </LinearLayout>
 
-
         <TextView
             android:id="@+id/fuel_consumption"
             android:layout_width="wrap_content"
@@ -80,13 +77,11 @@
 
         </LinearLayout>
 
-
         <TextView
             android:id="@+id/distance"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/distance" />
-
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -111,6 +106,7 @@
 
 
         </LinearLayout>
+
         <Button xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/calculate"
             android:layout_width="wrap_content"
@@ -148,8 +144,6 @@
 
         </LinearLayout>
 
-
     </LinearLayout>
 
-
-</androidx.core.widget.NestedScrollView>
+</FrameLayout>
