--- a/app/src/main/res/layout/fuelprice_fragment.xml
+++ b/app/src/main/res/layout/fuelprice_fragment.xml
@@ -31,6 +31,13 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/progressBar" />
 
+        <TextView
+            android:id="@+id/JSONTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/progressText"
+            android:text="123" />
+
     </LinearLayout>
 
 </FrameLayout>
